<resources>
    <string name="app_name">Inframote RC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Inframote</string>
    <string name="nav_header_subtitle">IR Remote Controller</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_opt_dashboard">Dashboard</string>
    <string name="about_view_title">About Us</string>
    <string name="contact_view_title">Contact Us</string>
    <string name="btn_new_remote_desc">Add New Remote</string>
    <string name="about_description_content"><b>InfraMote</b> is an Android app that lets you use your phone as an all-in-one IR remote to control your TV, fan, light, air conditioner, or pretty much any other electrical item that requires an <b>IR-based remote.</b></string>
    <string name="contact_us_view_title">Contact Us</string>
    <string name="contact_title_1">Prince Billy Graham Karmoker</string>
    <string name="contact_us_information_1">
        <b>Mobile:</b> 01813038237\n
        <b>Email:</b> princebillygk@gmail.com\n
        <b>Website:</b> princebillygk.github.io\n
    </string>
    <string name="contact_title_2">Ahesanul Karim Abid</string>
    <string name="contact_us_information_2">
        <b>Mobile:</b> 01521112106\n
        <b>Email:</b> ahesanulkarimabid@gmail.com\n
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ir_address_input_hint">Address</string>
    <string name="ir_command_input_hint">Command</string>
    <string name="address_input_title">Address</string>
    <string name="protocol_input_title">Protocol</string>
    <string name="command_input_title">Command</string>
    <string name="submit_btn_text">Add</string>
    <string name="submit_button_text">Add</string>
    <string name="protocol_field_title">Protocol</string>
    <string name="name_field_title">Name</string>
    <string name="add_button_text">Add Button</string>
    <string name="send_button_text">Send</string>
    <string name="delete_button_text">Delete</string>
    <string name="address_field_name">Address</string>
    <string name="command_field_name">command</string>
    <string name="edit_name_hint">Enter Name</string>

    <string-array name="ir_protocols">
        <item>NEC</item>
        <item>Sony</item>
    </string-array>
</resources>
