<?xml version="1.0" encoding="utf-8"?><!--<Button xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:id="@+id/button"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_margin="16dp"-->
<!--    android:background="@color/primaryLightColor"-->
<!--    android:text="button" />-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textNameValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_code_semibold"
            android:textSize="20sp"
            tools:text="Power Button AC" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textProtocolTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/protocol_field_title" />

                <TextView
                    android:id="@+id/textProtocolValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="NEC" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textAddressTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_field_name" />

                <TextView
                    android:id="@+id/textAddressValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="4585FA" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textCommandTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/command_field_name" />

                <TextView
                    android:id="@+id/textCommandValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="93" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/send_button_text" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/delete_button_text" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>